[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hitboxes and Hurtboxes/Hurtboxes.gd" type="Script" id=1]

[node name="Hurtboxes" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invicibility_started" from="." to="." method="_on_Hurtboxes_invicibility_started"]
[connection signal="invincibility_ended" from="." to="." method="_on_Hurtboxes_invincibility_ended"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
